# docetl

./: .env.example  .env.sample  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  BioDEX_evaluate.py  CUAD_evaluate.py  CUAD_sample50.py  Dockerfile  LICENSE  Makefile  PR_DESCRIPTION.md  PYARROW_CHECKPOINT_RESEARCH.md  README.md  aberrated.json  author_data.json  book_data.json  book_pipeline.yaml  bootstrap_evaluation.py  bootstrapping.py  compute_cuad_accuracy.py  compute_words_per_document.py  datapipeline.yaml  diseases.json  docker-compose.yml  dsl.yaml  evaluate_blackvault.py  example_checkpoint_inspection.py  example_fallback_config.yaml  exp_graph.py  exp_graph_max.py  extracted_medical_info.json  fruitsdatapipeline.yaml  genre_summaries.json  index.html  mkdocs.yml  modal_server.py  objects.inv  package-lock.json  (+26 more)
.claude/: cascade-progress.md  settings.json
.claude/hooks/: cascade-progress-report.sh  poll-feedback.sh
.claude/skills/: docetl
.github/workflows/: ci.yml  docker-ci.yml  docs.yml  release.yml  stage.yml
MCTS/: Node.py  ParetoFrontier.py  acc_comparator.py  graph.py  graph_baseline.py  instantiation_check.py  mcts.py  start.py
advanced/custom-operators/: index.html
advanced/extending-agents/: index.html
advanced/performance-tuning/: index.html
agenticpreprint/biodex/: README.md  biodex_ground_truth.json  biodex_sample.json  biodex_terms.json  compute_rp.py  docetl_base.yaml  docetl_base_opt_0.yaml  docetl_base_opt_1.yaml  docetl_base_opt_2.yaml  docetl_base_opt_3.yaml  docetl_base_opt_4.yaml  lotus_preprint_impl.py  nl_baseline.py  optimized_aug2024.yaml  optimized_jan2025.yaml
agenticpreprint/cuad/: README.md  docetl_base.yaml  docetl_base_opt.yaml  docetl_preprint_opt.yaml  evaluate.py  raw.json
agenticpreprint/testrewriteability/: base_cuad.yaml  base_cuad_opt.yaml  compute_metrics.py  evaluate_all_proj_synth.py
amazon-reviews-pipeline/: .env.example  .gitignore  ABOUT_REAL_DATA.md  DEMO_SUMMARY.md  README.md  SECURITY.md  check_setup.py  collect_real_reviews.py  collect_reviews.py  create_real_dataset.py  fetch_kaggle_reviews.py  fetch_ucsd_reviews.py  quick_demo.py  requirements.txt  review_analysis_pipeline.yaml  review_analysis_pipeline_simple.yaml  run_analysis.py  run_pipeline.sh  simple_pipeline.yaml  test_docetl.py  visualize_results.py  working_pipeline.yaml
amazon-reviews-pipeline/data/: amazon_reviews.json  real_reviews.json
amazon-reviews-pipeline/output/: analyzed_reviews.json  category_insights.json  summary_report.json
api-reference/cli/: index.html
api-reference/docetl/: index.html
api-reference/operations/: index.html
api-reference/optimizers/: index.html
api-reference/python/: index.html
assets/: fatal.json
best-practices/: index.html
community/: index.html
community/roadmap/: index.html
concepts/datasets/: index.html
concepts/operators/: index.html
concepts/optimization/: index.html
concepts/pipelines/: index.html
concepts/schemas/: index.html
design/model-cascade/: index.html
developer-reference/moar-extensibility/: index.html
docetl/: BioDEX_test.py  LLM_guided_plan_generators.py  __init__.py  _config.py  agents.py  api.py  base_schemas.py  builder.py  checkpoint.py  checkpoint_manager.py  checkpoint_utils.py  checks.py  cli.py  config_wrapper.py  console.py  containers.py  dataset.py  display.py  frame.py  graph_builder.py  optimizer.py  parsing_tools.py  pipeline.py  ratelimiter.py  router.py  runner.py  schemas.py  tools.py  ui.py  utils.py  utils_dataset.py  utils_evaluation.py
docetl/aisql/: __init__.py  compile.py  engine.py  functions.py  plan_bridge.py  run.py
docetl/apis/: pd_accessors.py
docetl/helper/: api_wrapper.py  cache.py  database.py  generic.py  progress_bar.py  sqlite.py
docetl/mcts/: Node.py  graph.py  (+10 more)
docetl_mcp/: __init__.py  server.py
docs/: agent-mode.md  aisql.md  best-practices.md  community.md  index.md  installation.md  python-api.md  quickstart-claude-code.md  retrievers.md  tutorial-pythonapi.md  tutorial.md
example_data/: post_di_trump_motion.json
examples/: fallback_models_example.yaml
experiments/: bnlj.py  debug_medical_extractions.py  extraction_outputs.txt  logical_fallacy_extraction.py  medical_complaints_precision.py  medical_complaints_precision_pandas.py  outputs.txt  structured_outputs.py
installation/: index.html
motion/: __init__.py  builder.py  cli.py  dataset.py  llm_profiler.py  operators.py  optimizer.py  runner.py  types.py  utils.py  workers.py
pandas/: index.html
paper_workloads/: download_ca.py  reduce_timeline_ca.py  serve_st_app_ca.py  st_app_ca.py  summarize_ca.py
playground/: index.html
python/: index.html
python-api/: index.html
quickstart-claude-code/: index.html
retrievers/: index.html
rise/: IMPLEMENTATION.md  README.md
search/: search_index.json
slides/: AGENTS.md  index.html  notes.md  outline.md  styles.css
stylesheets/: extra.css
testing-data/: dataset.json  debatepipeline.yaml  fruitsdatapipeline.yaml  results.json
tests/: README_output_modes.md  conftest.py  test_agentic_operations.py  test_aisql.py  test_aisql_llm.py  test_api.py  test_azure_rl.py  test_basic.py  test_builder.py  test_cascade_cache.py  test_cascade_core.py  test_cascade_embedding.py  test_cascade_filter.py  test_cascade_logprob.py  test_cascade_map.py  test_cascade_pairs.py  test_checkpoint_manager.py  test_config.py  test_eugene.py  test_fast_resolve.py  test_filter.py  test_frame.py  test_hf_outlines.py  test_map.py  test_map_calibration_config.py  test_map_decomp.py  test_map_parallel.py  test_moar_api.py  test_moar_judge.py  test_moar_multistep.py  test_ollama.py  test_op_edge_cases.py  test_oss_llm.py  test_output_modes.py  test_output_modes_simple.py  test_pandas_accessors.py  test_parsing_tools.py  test_plan_moar.py  test_plan_roundtrip.py  test_plan_rules.py  (+22 more)
tutorial/: index.html
tutorial-pythonapi/: index.html
website/: .env.local.example  .env.local.sample  README.md  eslint.config.mjs  package-lock.json  package.json  tailwind.config.ts  todos.md  tsconfig.json  vercel.json
(+1232 files in other folders)
