[tool.poetry]
name = "docetl"
version = "0.1.5"
description = "ETL with LLM operations."
authors = ["Shreya Shankar <shreyashankar@berkeley.edu>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "docetl" }
]
[tool.poetry.scripts]
docetl = "docetl.cli:app"

[tool.poetry.dependencies]
python = "^3.10"
litellm = "^1.42.1"
tqdm = "^4.66.4"
rich = "^13.7.1"
tenacity = "^9.0.0"
frozendict = "^2.4.4"
diskcache = "^5.6.3"
typer = "^0.12.5"
pydantic = "^2.9.2"
asteval = "^1.0.4"
scikit-learn = "^1.5.2"
numpy = "^1.26.4"
openpyxl = { version = "^3.1.5", optional = true }
python-docx = { version = "^1.1.2", optional = true }
pydub = { version = "^0.25.1", optional = true }
python-pptx = { version = "^1.0.2", optional = true }
azure-ai-documentintelligence = { version = "^1.0.0b4", optional = true }
paddlepaddle = { version = "^2.6.2", optional = true }
paddleocr = { version = "^2.8.1", optional = true }
pymupdf = { version = "^1.24.10", optional = true }

[tool.poetry.extras]
parsing = ["python-docx", "openpyxl", "pydub", "python-pptx", "azure-ai-documentintelligence", "paddlepaddle", "paddleocr", "pymupdf"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
python-dotenv = "^1.0.1"
ruff = "^0.6.1"
mypy = "^1.11.1"
pre-commit = "^3.8.0"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.34"
mkdocstrings = "^0.26.1"
linkchecker = "^10.5.0"
pytkdocs = "^0.16.2"
mkdocstrings-python = "^1.11.1"
mkdocs-glightbox = "^0.4.0"
pytest-sugar = "^1.0.0"
pytest-xdist = "^3.6.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--basetemp=/tmp/pytest"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
    "ignore::RuntimeWarning"
]

[tool.mypy]
files = "docetl"
mypy_path = "docetl"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = ['docetl/tests*']
ignore_missing_imports = true
show_error_codes = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."docetl.operation"]
map = "docetl.operations.map:MapOperation"
parallel_map = "docetl.operations.map:ParallelMapOperation"
filter = "docetl.operations.filter:FilterOperation"
unnest = "docetl.operations.unnest:UnnestOperation"
equijoin = "docetl.operations.equijoin:EquijoinOperation"
split = "docetl.operations.split:SplitOperation"
reduce = "docetl.operations.reduce:ReduceOperation"
resolve = "docetl.operations.resolve:ResolveOperation"
gather = "docetl.operations.gather:GatherOperation"
